# Talks

./: .gitignore  .gitmodules  Readme.md
20151021-LH-Func/: Readme.md  template-revealjs.html
20151021-LH-Stack/: Readme.md
20151209-LH-Categories/: Readme.md  custom.css  index.html  mvv
20160309-Parsing/: ChangeLog.md  Parsing.cabal  Readme.md  custom.css  index.html  stack.yaml
20160309-Parsing/src/: Body.hs  Commands.hs  FilmDB.hs  Seaman.hs
20160309a-Parsing/: LICENSE  parsing.cabal
20160309a-Parsing/src/Lib/: Attoparsec.hs  Megaparsec.hs  Parsec.hs
20160309a-Parsing/test/: Spec.hs
Clojure/: Readme.md
Cryptalk/: Readme.md  highlight.js  index.html  test.cry
Infoveranstaltung/: Readme.md
LikeLegos/: LikeLegos.markdown_github  README.md  Readme.en.md  index.html  index.html:w  new.hs
LikeLegos/Lego/: Lego.hs  LikeLegos.hs
LikeLegos/Lego/Lens/: LensLikeLegos.hs
LikeLegos/reveal.js/css/: reveal.css
Monad/: README.md  Readme.md  index.html
Testing_Thoroughly_in_Haskell/: reveal.js
keep_calm_and_curry_on/: Readme.md  custom.css
