name:                parsing
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/epsilonhalbe/parsing#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Heuschober
maintainer:          epsilonhalbe@gmail.com
copyright:           2016 (c) Martin Heuschober
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib.Attoparsec
                 ,     Lib.Parsec
                 ,     Lib.Megaparsec
  build-depends:       base >= 4.7 && < 5
               ,       attoparsec
               ,       megaparsec
               ,       parsec
  default-language:    Haskell2010

test-suite parsing-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
               ,       parsing
               ,       attoparsec
               ,       megaparsec
               ,       parsec
               ,       tasty
               ,       tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/epsilonhalbe/parsing
